# blog_bob

./: .clang-format  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  compile_commands.json
.github/workflows/: build-test.yml
shit/: haha  shit.md
src/: bob.cpp  bob.hpp  bob.rs  config.cpp  config.hpp  main.cpp  main.rs
