[package]
name = "blog_bob"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inotify = "0.10.1"
pulldown-cmark = "0.9.3"
serde = { version = "1.0.167", features = ["derive"] }
serde_yaml = "0.9.22"
time = { version = "0.3.22", features = ["serde", "macros"] }
